[package]
name = "haxesandbox_fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
owo-colors = "4.0.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.8.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
